# rmall.rs

./: .gitignore  Cargo.toml  README.md  notes.txt  readme.md
src/: deleteutil.rs  main.rs  pathutil.rs
